Fixing alignment

--- a/src/Styles/PostCard.css
+++ b/src/Styles/PostCard.css
@@ -99,7 +99,7 @@
 
 .PostCard-excerpt {
     /* text-center text-lg text-gray-700 font-normal px-4 lg:px-20 mb-8 */
-    text-align: left;
+    text-align: right;
     font-size: 1.125rem;
     line-height: 1.75rem;
     color: #374151;
@@ -188,7 +188,7 @@
 
     .PostCard-excerpt {
         /* text-center text-lg text-gray-700 font-normal px-4 lg:px-20 mb-8 */
-        text-align: left;
+        text-align: right;
         font-size: 1.125rem;
         line-height: 1.75rem;
         color: #374151;
